Changed the Font Style and the color of the Font in the Header

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
 
 *{
     box-sizing: border-box;
@@ -6,7 +6,8 @@
     text-decoration: none;
     margin: 0;
     padding: 0;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 header {
@@ -20,9 +21,17 @@ header {
 .logo {
     margin-left: 20px;
     margin-right: auto;
+    color: #f9FAF8;
+    font-size: 24px;
+    font-weight: 500;
 }
 
 .nav_links li {
     display: inline-block;
     padding: 0px 20px;
+}
+
+.container {
+    width: 1100px;
+    background-color: red;
 }
