Some more updates on the Navbar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
 *{
     box-sizing: border-box;
@@ -10,12 +10,39 @@
     font-weight: 300;
 }
 
-header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+/* Navbar */
+
+.navbar {
     background-color: #1F2937;
     height: 70px;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar a {
+    padding: 10px;
+    margin: 0 5px;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 40px;
+}
+
+.navbar .flex {
+    justify-content: space-between;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .logo {
@@ -24,14 +51,7 @@ header {
     color: #f9FAF8;
     font-size: 24px;
     font-weight: 500;
+    cursor: pointer;
 }
 
-.nav_links li {
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.container {
-    width: 1100px;
-    background-color: red;
-}
+/* ------------------------------- */
