--- a/style.css
+++ b/style.css
@@ -96,3 +96,41 @@
     color: #F9FAF8;
     font-weight: 500;
 }
+
+/* Random Info Section */
+
+.random_info {
+    background-color: #fff;
+    width: 100%;
+    height: 400px;
+}
+
+.rand_inf_h1 {
+    font-weight: 700;
+    color: #1F2937;
+    font-size: 36px;
+    text-align: center;
+    margin: 50px;
+}
+
+.cards_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.card { 
+    height: 150px;
+    width: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+    flex-shrink: 0;
+}
+
+#go_below {
+    margin-top: 150px;
+    text-align: center;
+}
+
+/* Quote Section */
