--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,300&display=swap');
 
 *{
     box-sizing: border-box;
@@ -90,11 +90,12 @@
 
 .btn1 {
     border: none;
-    border-radius: 3px;
+    border-radius: 8px;
     padding: 8px 28px;
     background-color: #3882F6;
     color: #F9FAF8;
     font-weight: 500;
+    cursor: pointer;
 }
 
 /* Random Info Section */
@@ -134,3 +135,74 @@
 }
 
 /* Quote Section */
+
+.quote {
+    background-color: #E5E7EB;
+    width: 100%;
+    height: 400px;
+}
+
+.quote .container {
+    max-width: 880px;
+    flex-direction: column;
+}
+
+.the_quote {
+    font-size: 36px;
+}
+
+.quote_sign {
+    align-self: flex-end;
+    margin-right: 10px;
+    font-weight: 700;
+}
+
+/* Sign Up Section */
+
+.sign_up {
+    background-color: #fff;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 200px;
+    width: 100%;
+    background-color:#3882F6;
+    border-radius: 6px;
+}
+
+.card2_left h2 {
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.card2_left p {
+    color: white;
+}
+
+.btn2 {
+    border: 2px solid white;
+    border-radius: 8px;
+    padding: 8px 28px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+/* Footer */
+
+footer {
+    background-color: #1F2937;
+    color: white;
+    text-align: center;
+    padding: 30px;
+}
